# snakeoil

./: .bzrignore  .coveragerc  .git-blame-ignore-revs  .gitignore  .landscape.yaml  .travis.yml  AUTHORS  BSD  COPYING  LICENSE  MANIFEST.in  Makefile  NEWS  NEWS.rst  README  README.rst  build_api_docs.sh  pkgdist.py  pyproject.toml  setup.cfg  setup.py  tox.dist  tox.ini
.github/workflows/: doc.yml  release.yml  test.yml
.travis/: build-dist-files.sh
doc/: Makefile  api.rst  conf.py  generate_api_rsts.py  index.rst  public_modules.txt
include/snakeoil/: common.h  heapdef.h  macros.h  py24-compatibility.h
lintplugin/: pylintrc  snakeoil_lint.py
refs/heads/: deploy  main  master
refs/tags/: v0.10.10  v0.10.11  v0.10.2  v0.10.3  v0.10.4  v0.10.5  v0.10.6  v0.10.7  v0.10.8  v0.10.9  v0.11.0  v0.11.1  v0.11.2  v0.9.4
requirements/: build.txt  dev.txt  dist.txt  docs.txt  tox.txt
snakeoil/: __init__.py  _fileutils.py  _osutils_compat.py  _posix.pyx  _sequences.pyx  bash.py  caching.py  caching_2to3.py  cli.py  compatibility.py  compatibility_py3k.py  containers.py  context.py  contextlib.py  contexts.py  currying.py  data_source.py  debug_imports.py  demandload.py  dependant_methods.py  descriptors.py  distutils_extensions.py  errors.py  fileutils.py  fix_copy.py  formatters.py  iterables.py  klass.py  lists.py  mappings.py  modules.py  namespaces.py  obj.py  pickling.py  process.py  pyflakes_extension.py  sequences.py  stringio.py  strings.py  struct_compat.py  (+4 more)
snakeoil/chksum/: __init__.py  _whirlpool.py  defaults.py
snakeoil/cli/: arghparse.py  tool.py
snakeoil/compression/: __init__.py  _bzip2.py  _util.py
snakeoil/osutils/: __init__.py  mount.py  native_readdir.py
snakeoil/process/: __init__.py  _unshare.py  namespaces.py  spawn.py
snakeoil/sphinx_utils/: generate_api_rsts.py  generate_news_rst.py
snakeoil/test/: __init__.py  argparse_helpers.py  mixins.py  test_bash.py  test_caching.py  test_chksum_defaults.py  test_cli.py  test_compatibility.py  test_containers.py  test_contexts.py  test_currying.py  test_data_source.py  test_del_usage.py  test_demandload.py  test_demandload_usage.py  test_dependant_methods.py  test_descriptors.py  test_fileutils.py  test_formatters.py  test_iterables.py  test_klass.py  test_lists.py  test_mappings.py  test_modules.py  test_obj.py  test_osutils.py  test_process.py  test_py3k_eq_hash_inheritance.py  test_sequences.py  test_slot_shadowing.py  test_source_hygene.py  test_stringio.py  test_weakrefs.py
snakeoil/xml/: __init__.py
src/: caching.c  compatibility.c  formatters.c  functoolsmodule.c  klass.c  lists.c  posix.c  readdir.c  sequences.c  whirlpool_cdo.c
src/snakeoil/: __init__.py  __version__.py  _fileutils.py  _internals.py  _klass.py  _posix.pyi  _posix.pyx  _sequences.pyi  _sequences.pyx  _util.py  bash.py  caching.py  compatibility.py  constraints.py  containers.py  contexts.py  currying.py  data_source.py  decorators.py  demandimport.py  demandload.py  dependant_methods.py  deprecation.py  descriptors.py  errors.py  fileutils.py  formatters.py  iterables.py  klass.py  log.py  mappings.py  modules.py  obj.py  pickling.py  python_namespaces.py  sequences.py  stringio.py  strings.py  struct_compat.py  tar.py  (+2 more)
tests/: test_bash.py  test_caching.py  test_chksum.py  test_chksum_defaults.py  test_code_quality.py  test_constraints.py  test_containers.py  test_contexts.py  test_currying.py  test_data_source.py  test_decorators.py  test_delayed.py  test_demandload.py  test_demandload_usage.py  test_dependant_methods.py  test_deprecation.py  test_descriptors.py  test_eq_hash_inheritance.py  test_fileutils.py  test_formatters.py  test_iterables.py  test_klass.py  test_mappings.py  test_modules.py  test_obj.py  test_osutils.py  test_process.py  test_process_spawn.py  test_python_namespaces.py  test_sequences.py  test_slot_shadowing.py  test_source_hygene.py  test_stringio.py  test_strings.py  test_test.py  test_version.py  test_weakrefs.py
tests/cli/: test_arghparse.py  test_input.py
tests/compression/: __init__.py  test_bzip2.py  test_init.py  test_xz.py
tests/klass/: test_immutable.py  test_init.py  test_memoize.py  test_meta.py  test_util.py
tests/module/: test_bash.py  (+28 more)
(+79 files in other folders)
