[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snakeoil"
description = "misc common functionality and useful optimizations"
readme = "README.rst"
requires-python = "~=3.10"
# alphabetical by surname
authors = [
	{name = "Tim Harder", email = "radhermit@gmail.com"},
	{name = "Brian Harring", email = "ferringb@gmail.com"},
	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
]
maintainers = [
    {name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

dependencies = [
    "lazy-object-proxy",
]

[project.optional-dependencies]
test = [
    "pytest >=6.0",
    "pytest-cov",
]
doc = ["sphinx"]

[project.urls]
Homepage = "https://github.com/pkgcore/snakeoil"
Documentation = "https://pkgcore.github.io/snakeoil/"
Source = "https://github.com/pkgcore/snakeoil"

[tool.flit.sdist]
include = ["doc", "tox.ini", "tests", "LICENSE", "Makefile", "NEWS.rst"]
exclude = [".github/", ".gitignore", "doc/api/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -ra -l"
testpaths = ["tests"]
